[package]
name = "remote"
version = "0.1.0"
authors = ["matheo lucak <matheo.lucak@epitech.eu>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
hal = { package = "esp32c3-hal", version = "0.15.0", features = [
    "async",
    "embassy",
    # "embassy-time-timg0",
    "embassy-time-systick",
    "embassy-executor-thread",
] }
esp-backtrace = { version = "0.11.0", features = ["esp32c3", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.9.0", features = ["esp32c3", "log"] }
log = { version = "0.4.20" }
embassy-executor   = { version = "0.5.0", features = ["nightly"] }
embassy-sync       = "0.5.0"
embassy-time       = {version = "0.3.0", features = ["tick-hz-16_000_000"]}
