[package]
name = "remote"
version = "0.1.0"
authors = ["matheo lucak <matheo.lucak@epitech.eu>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
hal = { package = "esp-hal", version = "0.16.0", features = [
    "esp32c3",
    "async",
    "embassy",
    "embassy-time-systick-16mhz",
    "embassy-executor-thread",
    # "eh1",
] }
esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.9.0", features = ["esp32c3", "log"] }
log = { version = "0.4.20" }
embassy-executor = { version = "0.5.0", features = ["nightly"] }
embassy-sync = "0.5.0"
embassy-executor-macros = "0.4.1"
embassy-time = { version = "0.3.0", features = ["generic-queue-32"] }
dummy-pin = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal = "1.0.0"
sx127x_lora = "0.3.1"

protocol = { path = "../protocol" }

[features]
default = []
transmitter = []