[package]
name = "rust-test-esp"
version = "0.1.0"
authors = ["umbra <quentin1.vedrenne@epitech.eu>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.16.0", features = [ "esp32c6",
    "async",
    "embassy",
    "embassy-time-systick-16mhz",
    "embassy-executor-thread", ] }
esp-println = { version = "0.9.0", features = ["esp32c6", "log"] }
log = { version = "0.4.20" }
embassy-executor = { version = "0.5.0", features = ["nightly"] }
embassy-sync = "0.5.0"
embassy-time = { version = "0.3.0", features = ["generic-queue-32"] }
arrayvec={version = "0.4.12", default-features = false}
embedded-hal-async = "1.0.0"
embedded-hal = "1.0.0"
[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false